--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -171,7 +171,7 @@
   date: "Week 11: April 2"
   materials: "Physics Engine Basics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)<br/>
               Euler Integration [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Euler1.pdf)<br/>
-              Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
+             
                **Optional Reading:**<br/>
               <br/>
               Game Physics Engine Development Chapters 2 to 4, 12<br/>
@@ -180,7 +180,8 @@
   title: "Game Physics"
 - 
   date: "Week 11: April 4"
-  materials: "Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)<br/>"
+  materials: "  Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
+  Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)<br/>"
   title: "Game Physics"
 - 
   date: "Week 12: April 9"
