--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -186,12 +186,13 @@
   title: "Game Physics"
 - 
   date: "Week 12: April 2"
-  materials: " Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
+  materials: " Lecture [Video](https://mediaspace.illinois.edu/media/t/1_cfd2z5dy)<br/>
+  Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
               <br/>"
   title: "Game Physics"
 - 
   date: "Week 12: April 4"
-  materials: " Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)
+  materials: " Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)<br/>
               Art: What is the USD File Type? [YouTube](https://www.youtube.com/watch?v=GOdyx-oSs2M)<br/>
               Art: USD Primer [YouTube](https://youtu.be/Yp_TRVD3wjQ?si=j6KjeFqaLY4UoBhL)<br/><br/>"
   title: "Art"  
