--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -95,7 +95,7 @@
               From the book Virtual Reality by Steve LaValle<br/>
               Chapter 1: Introduction [pdf](https://lavalle.pl/vr/vrch1.pdf)<br/>
               Chapter 2: Bird's Eye View [pdf](https://lavalle.pl/vr/vrch2.pdf)<br/>
-              Courtesy of (Steve LaValle)[https://lavalle.pl/vr/]"
+              Courtesy of [Steve LaValle](https://lavalle.pl/vr/)"
   title: "VR/XR"
 - 
   date: "Week 6: Feb 20"
