--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -214,7 +214,7 @@
 - 
   date: "Week 14: April 16"
   materials: ""
-  title: "Game AI"
+  title: "Guest Lecture: Game Industry"
 - 
   date: "Week 14: April 18"
   materials: ""
