--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -197,7 +197,7 @@
   title: "Art"  
 - 
   date: "Week 13: April 9"
-  materials: "Lecture [Video]()<br/>
+  materials: "Lecture [Video](https://mediaspace.illinois.edu/media/t/1_nczqqubq)<br/>
              Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf)<br/>   
              Waypoints [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-AI-5.pptx.pdf)<br/><br/>
       
