--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -191,8 +191,7 @@
   title: "Game Physics"
 - 
   date: "Week 12: April 4"
-  materials: " Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)<br/>
-              Art: What is the USD File Type? [YouTube](https://www.youtube.com/watch?v=GOdyx-oSs2M)<br/>
+  materials: "Art: What is the USD File Type? [YouTube](https://www.youtube.com/watch?v=GOdyx-oSs2M)<br/>
               Art: USD Primer [YouTube](https://youtu.be/Yp_TRVD3wjQ?si=j6KjeFqaLY4UoBhL)<br/><br/>"
   title: "Art"  
 - 
@@ -209,8 +208,8 @@
   title: "Animation and AI"
 - 
   date: "Week 13: April 11"
-  materials: ""
-  title: "UE5 Lumen"
+  materials: "FBX [Video](https://mediaspace.illinois.edu/media/t/1_4xadvjeq)&nbsq;[PDF]Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)"
+  title: "Art: File Formats"
 - 
   date: "Week 14: April 16"
   materials: ""
@@ -218,7 +217,7 @@
 - 
   date: "Week 14: April 18"
   materials: ""
-  title: "Generative AI"
+  title: "UE5 Lumen"
 - 
   date: "Week 14: April 23"
   materials: ""
