--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -208,7 +208,8 @@
   title: "Animation and AI"
 - 
   date: "Week 13: April 11"
-  materials: "FBX [Video](https://mediaspace.illinois.edu/media/t/1_4xadvjeq)&nbsq;[PDF]Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)"
+  materials: "FBX [Video](https://mediaspace.illinois.edu/media/t/1_4xadvjeq)&nbsq;[PDF]Art: FBX Files [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-SceneGraphs and FBX.pdf)<br/><br/>
+              **PrairieLearn HW 5 Assigned [Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390710)**"
   title: "Art: File Formats"
 - 
   date: "Week 14: April 16"
