--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -223,7 +223,7 @@
              Stereoscopic Calibration [Video](https://classtranscribe.illinois.edu/video?id=6b4dd742-281f-4399-9860-93aeedc73ec9&from=sharedlink) <br/>
              Stereoscopic Implementation [Video](https://classtranscribe.illinois.edu/video?id=e531f14b-d3bf-4780-89dc-e134f826fb7d&from=sharedlink)
              <br/><br/>"
-  title: "UE5 Lumen"
+  title: "4 Credit Lectures "
 - 
   date: "Week 15: April 23"
   materials: ""
