--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -222,7 +222,10 @@
              Stereoscopic Concepts [Video](https://classtranscribe.illinois.edu/video?id=1d089ff7-eae6-4260-8365-0c0e84600be6&from=sharedlink) <br/>
              Stereoscopic Calibration [Video](https://classtranscribe.illinois.edu/video?id=6b4dd742-281f-4399-9860-93aeedc73ec9&from=sharedlink) <br/>
              Stereoscopic Implementation [Video](https://classtranscribe.illinois.edu/video?id=e531f14b-d3bf-4780-89dc-e134f826fb7d&from=sharedlink)
-             <br/><br/>"
+             <br/><br/>
+             **PrairieLearn 4 Credit HW 1 [Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390703)**<br/>
+             **PrairieLearn 4 Credit HW 2 [Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390702)**
+            "
   title: "4 Credit Lectures "
 - 
   date: "Week 15: April 23"
