--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -230,13 +230,14 @@
 - 
   date: "Week 15: April 23"
   materials: ""
-  title: "Guest Lecture: Game Industry"
+  title: "UE5 Lumen"
 - 
   date: "Week 15: April 25"
   materials: ""
-  title: "Generative AI"  
+  title: "**No Lecture....Finish up the project :)**"  
 - 
   date: "Week 16: April 30"
-  materials: "**[Exam Link]()**"
+  materials: "**11am CT [Exam Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390705)**<br/>
+                **7pm CT [Exam Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390705)**"
   title: "**EXAM 2**"
 -
