--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -230,7 +230,8 @@
 - 
   date: "Week 15: April 23"
   materials: "Ray Tracing [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RayTracingShort.pdf)<br/>
-              UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Lumen.pdf)
+              UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Lumen.pdf)<br/><br/>
+              **PrairieLearn HW 6 [Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390711)**
   
   "
   title: "UE5 Lumen"
