--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -238,7 +238,8 @@
 - 
   date: "Week 15: April 25"
   materials: ""
-  title: "**No Lecture....Finish up the project :)**"  
+  title: "**No Lecture<br/>
+           Finish up the project :)**"  
 - 
   date: "Week 16: April 30"
   materials: "**11am CT [Exam Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390705)**<br/>
