--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -229,7 +229,8 @@
   title: "4 Credit Lectures "
 - 
   date: "Week 15: April 23"
-  materials: "Ray Tracing [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RayTracingShort.pdf)<br/>
+  materials: "Lecture [Video](https://mediaspace.illinois.edu/media/t/1_3cq1k5o8)<br/><br/>
+  Ray Tracing [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-RayTracingShort.pdf)<br/>
               UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Lumen.pdf)<br/><br/>
               **PrairieLearn HW 6 [Link](https://us.prairielearn.com/pl/course_instance/148981/assessment/2390711)**
   
