--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -5,5 +5,6 @@
   title: "Course Introduction"
 - 
   date: "Week 1: Aug 29"
-  materials: "Your First Hour in UE 5.2 [Epic Link](https://dev.epicgames.com/community/learning/courses/3ke/your-first-hour-in-unreal-engine-5-2/vvdk/your-first-hour-in-unreal-engine-5-2-overview)"
+  materials: "Your First Hour in UE 5.2 [Epic Link](https://dev.epicgames.com/community/learning/courses/3ke/your-first-hour-in-unreal-engine-5-2/vvdk/your-first-hour-in-unreal-engine-5-2-overview)<br/>
+              [UE 5 Basics](https://dev.epicgames.com/documentation/en-us/unreal-engine/understanding-the-basics-of-unreal-engine)"
   title: "Intro to Unreal Engine"
