--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,7 +1,7 @@
 - 
   date: "Week 1: Aug 27"
   materials: "Course Overview and Game Genres [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-GameGenres.pdf)<br/>
-              Lecture [Video]() <br/>"
+              Lecture [Video](https://mediaspace.illinois.edu/media/t/1_4qx12q24) <br/>"
   title: "Course Introduction"
 - 
   date: "Week 1: Aug 29"
