--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -12,7 +12,7 @@
   date: "Week 2: Sep 3"
   materials: "Art: Assets [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-ArtOverview.pdf) <br/>
               UE5 Features [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5Overview.pdf)<br/>
-              Lecture [Video]() <br/><br/>
+              Lecture [Video](https://mediaspace.illinois.edu/media/t/1_gh7qtwf8) <br/><br/>
               **MP1 Due Sep 12** [Link](https://illinois-cs415.github.io/assignments/mp1.html)<br/><br/>
               **Optional Reading:**<br/>
                Fundamentals of Computer Graphics Ch 12<br/>
