--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -61,3 +61,98 @@
               SIGGRAPH 2021 Talk by Epic Engineer Brian Kariss [YouTube](https://youtu.be/eviSykqSUUw?si=itB6ry5OjlipMcPG)"
   title: "Rendering" 
 -
+  date: "Week 5: Sep 24"
+  materials: ""
+  title: "" 
+-
+  date: "Week 5: Sep 26"
+  materials: ""
+  title: "" 
+-
+  date: "Week 6: Oct 1"
+  materials: ""
+  title: "" 
+-
+  date: "Week 6: Oct 3"
+  materials: ""
+  title: "" 
+-
+  date: "Week 7: Oct 8"
+  materials: ""
+  title: "" 
+-
+  date: "Week 7: Oct 10"
+  materials: ""
+  title: "" 
+-
+  date: "Week 8: Oct 15"
+  materials: ""
+  title: "" 
+-
+  date: "Week 8: Oct 17"
+  materials: ""
+  title: "" 
+-
+ date: "Week 9: Oct 22"
+  materials: ""
+  title: "" 
+-
+  date: "Week 9: Oct 24"
+  materials: ""
+  title: "" 
+-
+  date: "Week 10: Oct 29"
+  materials: ""
+  title: "" 
+-
+  date: "Week 10: Oct 31"
+  materials: ""
+  title: "" 
+-
+  date: "Week 11: Nov 5"
+  materials: ""
+  title: "" 
+-
+  date: "Week 11: Nov 7"
+  materials: ""
+  title: "" 
+-
+  date: "Week 12: Nov 12"
+  materials: ""
+  title: "" 
+-
+  date: "Week 12: Nov 14"
+  materials: ""
+  title: "" 
+-
+ date: "Week 13: Nov 19"
+  materials: ""
+  title: "" 
+-
+  date: "Week 13: Nov 21"
+  materials: ""
+  title: "" 
+-
+  date: "Week 14: Nov 26"
+  materials: ""
+  title: "" 
+-
+  date: "Week 14: Nov 28"
+  materials: ""
+  title: "" 
+-
+  date: "Week 15: Dec 3"
+  materials: ""
+  title: "" 
+-
+  date: "Week 15: Dec 5"
+  materials: ""
+  title: "" 
+-
+  date: "Week 16: Dec 10"
+  materials: ""
+  title: "" 
+-
+  date: "Week 16: Dec 12"
+  materials: ""
+  title: "" 
