--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -79,7 +79,7 @@
 -
   date: "Week 7: Oct 8"
   materials: ""
-  title: "" 
+  title: "**Exam 1**" 
 -
   date: "Week 7: Oct 10"
   materials: ""
@@ -151,5 +151,5 @@
 -
   date: "Week 16: Dec 10"
   materials: ""
-  title: "" 
+  title: "**EXAM 2**" 
 -
