--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -79,7 +79,7 @@
 -
   date: "Week 7: Oct 8"
   materials: ""
-  title: "**Exam 1**" 
+  title: "**EXAM 1**" 
 -
   date: "Week 7: Oct 10"
   materials: ""
