--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -50,7 +50,7 @@
   materials: " Design: Level Design [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/Game_Dev_With_UE4_Lecture04.pdf)<br/>
                Rendering: LOD [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-LOD-23.pdf)<br/>
                Rendering: CLOD [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-CLOD.pdf)<br/>
-               Lecture [Video]()"
+               Lecture [Video](https://mediaspace.illinois.edu/media/t/1_yg23sun3)"
   title: "Rendering"
 -
   date: "Week 4: Sep 19"
