--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -102,7 +102,7 @@
   date: "Week 7: Oct 8"
   materials: "Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf) [Video]()<br/>
               <br/><br/>
-              **PrairieLearn HW 3 Assigned [Link]()**<br/><br/>
+              **PrairieLearn HW 3 Assigned [Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443571)**<br/><br/>
               **Optional Reading:**<br/>
                Wikipedia Phong Reflection Model [Link](https://en.wikipedia.org/wiki/Phong_reflection_model)<br/>
                Fundamentals of Computer Graphics Ch 5 [UIUC Library Link](https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955292160105899)<br/>
