--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -116,8 +116,8 @@
   title: "Rendering"
 -
   date: "Week 8: Oct 15"
-  materials: "**11am Central Time [Exam Link]()**<br/><br/>
-              **8pm Central Time [Exam Link]()**"
+  materials: "**11am Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443567)**<br/><br/>
+              **8pm Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443567)**"
   title: "**EXAM 1**" 
 -
   date: "Week 8: Oct 17"
