--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -87,7 +87,7 @@
 - 
   date: "Week 6: Oct 1"
   materials: "UE5 Virtual Geometry [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-NaniteUE5.pdf)<br/>
-              Lecture [Video]() <br/>
+              Lecture [Video](https://mediaspace.illinois.edu/media/t/1_856fcxmr) <br/>
               "
   title: "Rendering"
 -
