--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -100,7 +100,7 @@
   title: "Rendering"
 -
   date: "Week 7: Oct 8"
-  materials: "Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf) [Video]()<br/>
+  materials: "Shading [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Shading.pdf) [Video](https://mediaspace.illinois.edu/media/t/1_gsavl3ef)<br/>
               <br/><br/>
               **PrairieLearn HW 3 Assigned [Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443571)**<br/><br/>
               **Optional Reading:**<br/>
