--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -157,43 +157,43 @@
 -
   date: "Week 11: Nov 5"
   materials: ""
-  title: "" 
+  title: "Game Physics" 
 -
   date: "Week 11: Nov 7"
   materials: ""
-  title: "" 
+  title: "Game Physics" 
 -
   date: "Week 12: Nov 12"
   materials: ""
-  title: "" 
+  title: "Game Physics" 
 -
   date: "Week 12: Nov 14"
   materials: ""
-  title: "" 
+  title: "Game Physics" 
 -
   date: "Week 13: Nov 19"
   materials: ""
-  title: "" 
+  title: "Graphics: UE5 Lumen" 
 -
   date: "Week 13: Nov 21"
   materials: ""
-  title: "" 
+  title: "Graphics: Real-Time Ray Tracing" 
 -
   date: "Week 14: Nov 26"
-  materials: ""
-  title: "" 
+  materials: "**NO LECTURE**"
+  title: "**FALL BREAK**" 
 -
   date: "Week 14: Nov 28"
-  materials: ""
-  title: "" 
+  materials: "**NO LECTURE**"
+  title: "**FALL BREAK**"  
 -
   date: "Week 15: Dec 3"
   materials: ""
-  title: "" 
+  title: "Game AI" 
 -
   date: "Week 15: Dec 5"
   materials: ""
-  title: "" 
+  title: "Game AI" 
 -
   date: "Week 16: Dec 10"
   materials: ""
