--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -131,7 +131,7 @@
 -
   date: "Week 9: Oct 22"
   materials: "Transformations [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/blob/main/img/slides/415-GeometricTransformations.pdf) <br/>
-               [Video]()<br/><br/>
+               [Video](https://mediaspace.illinois.edu/media/t/1_d94l45ub)<br/><br/>
                **Optional Reading:**<br/>
                Real-Time Rendering Section 4.1 [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
   title: "Course Project and Animation Basics" 
