--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -142,7 +142,7 @@
   title: "GDC Talks on Design"
 -
   date: "Week 10: Oct 29"
-  materials: "[Video]()<br/>
+  materials: "[Video](https://mediaspace.illinois.edu/media/t/1_hjgz6dbj)<br/>
                Euler Angles [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-EulerAngles.pdf)<br/>
                Quaternions [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Quaternions.pdf) <br/><br/>
                  **Optional Reading:**<br/>
