--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -170,7 +170,8 @@
   title: "Game Physics" 
 -
   date: "Week 11: Nov 7"
-  materials: "Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)"
+  materials: "Chaos Physics in UE [YouTube](https://youtu.be/6T8LzaIq3Qs)<br/><br/>
+              Homework 4 [PL Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443573)"
   title: "Game Physics" 
 -
   date: "Week 12: Nov 12"
