--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -158,7 +158,7 @@
   date: "Week 11: Nov 5"
   materials: "Physics Engine Basics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-PhysicsEngine.pdf)<br/>
              Euler Integration [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Euler1.pdf)<br/>
-             [Video]()<br/><br/>
+             [Video](https://mediaspace.illinois.edu/media/t/1_bh64avxg)<br/><br/>
                **Optional Reading:**<br/>
               <br/>
               Game Physics Engine Development <br/>
