--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -183,7 +183,7 @@
   date: "Week 12: Nov 14"
   materials: "Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
                Eric Haines Ray Tracing Intro [Link](https://developer.nvidia.com/blog/ray-tracing-essentials-part-1-basics-of-ray-tracing/)<br/><br/>
-               **PrairieLearn HW 5 Assigned [Link]()**<br/><br/>
+               **PrairieLearn HW 5 Assigned [Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443574)**<br/><br/>
               **Optional Reading:**<br/>
               Fundamentals of Computer Graphics Chapter 4<br/>
               [PDF](https://drive.google.com/file/d/13Oxmdg7sNspx7C2k2vrz_vmJvPA0bPfS/view?usp=sharing)"
