--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -177,7 +177,8 @@
 -
   date: "Week 12: Nov 12"
   materials: "Collision Detection [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-Collide1.pdf)<br/>
-              Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf)<br/> "
+              Kinematics [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-IntroToAnim.pdf)<br/> 
+              [Video](https://mediaspace.illinois.edu/media/t/1_gr1ys5sl)"
   title: "Game Physics" 
 -
   date: "Week 12: Nov 14"
