--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -208,13 +208,14 @@
 -
   date: "Week 15: Dec 3"
   materials: ""
-  title: "Game AI" 
+  title: "Guest Lecture: Game Industry" 
 -
   date: "Week 15: Dec 5"
   materials: "[Creative Future with Artificial Intelligence - GDC 2023 Talk](https://youtu.be/fOqLuWml0UY?si=wXWE04Opl8HpHvVs)"
   title: "Game AI" 
 -
   date: "Week 16: Dec 10"
-  materials: ""
+  materials: "**11am Central Time [Exam Link]()**<br/><br/>
+              **8pm Central Time [Exam Link]()**"
   title: "**EXAM 2**" 
 -
