--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -191,7 +191,8 @@
 -
   date: "Week 13: Nov 19"
   materials: "Ray Tracing Basics [PDF](https://github.com/illinois-cs498gd/illinois-cs498gd.github.io/raw/main/img/slides/415-RayTracing.pdf) <br/>
-               UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/><br/>"
+               UE5 Lumen [PDF](https://github.com/illinois-cs415/illinois-cs415.github.io/raw/main/img/slides/415-UE5 Lumen.pdf)<br/>
+               [Video](https://mediaspace.illinois.edu/media/t/1_07hgvgrq)<br/>"
   title: "Graphics: UE5 Lumen" 
 -
   date: "Week 13: Nov 21"
