--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -216,7 +216,7 @@
   title: "Game AI" 
 -
   date: "Week 16: Dec 10"
-  materials: "**11am Central Time [Exam Link]()**<br/><br/>
-              **8pm Central Time [Exam Link]()**"
+  materials: "**11am Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443568)**<br/><br/>
+              **8pm Central Time [Exam Link](https://us.prairielearn.com/pl/course_instance/161595/assessment/2443568)**"
   title: "**EXAM 2**" 
 -
